--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,5 +31,6 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.cheekiat:indicatorsteplib:1.9'
+    implementation 'com.weiwangcn.betterspinner:library-material:1.1.0'
 
 }
