--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".students.addStudent"></activity>
-        <activity android:name=".teacher.addTeacher" />
+        <activity android:name=".students.addStudent" android:parentActivityName=".Home"></activity>
+        <activity android:name=".teacher.addTeacher" android:parentActivityName=".Home"/>
         <activity
             android:name=".Home"
             android:label="@string/title_activity_home"
