--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,5 +32,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.cheekiat:indicatorsteplib:1.9'
     implementation 'com.weiwangcn.betterspinner:library-material:1.1.0'
-
+    implementation 'com.squareup.picasso:picasso:2.71828'
 }
